# nemo-agent-v1

./: .gitignore  CLAUDE.md  CLAUDE.md.bak  Dockerfile  LICENSE  README.md  update_ubuntu_docker.sh  第二届腾讯云黑客松智能渗透挑战赛API文档.md
claude-code/: .mcp.json  entrypoint.sh  entrypoint_local.sh  install_all.sh  install_ubuntu.sh  prompt-test.md  pyproject.toml  requirements.txt  reverse_mcp.sh  setup_symlinks.sh  start_claude.sh
claude-code/.claude/agents/: penetration-agent.md  pentest-agent.md  pentest-agent.md.bak
claude-code/.claude/commands/: pentest.md
claude-code/.claude/skills/pentest/: SKILL.md  SKILL.md.bak
claude-code/.claude/skills/pentest/ai-security/: SKILL.md  llm-api.md  prompt-injection.md
claude-code/.claude/skills/pentest/auxiliary/: README.md  SKILL.md
claude-code/.claude/skills/pentest/browser/: SKILL.md
claude-code/.claude/skills/pentest/business-logic/: SKILL.md
claude-code/.claude/skills/pentest/business-logic/references/: authentication.md  authorization.md  financial.md  information.md  logic-flow.md
claude-code/.claude/skills/pentest/cloud/: SKILL.md  container-security.md  metadata-service.md  ssrf-to-cloud.md  storage-security.md
claude-code/.claude/skills/pentest/cloud/tools/: cf.md  cloudsword.md  lc.md
claude-code/.claude/skills/pentest/competition/: SKILL.md
claude-code/.claude/skills/pentest/core/ctf-workflow/: SKILL.md
claude-code/.claude/skills/pentest/core/reconnaissance/: SKILL.md
claude-code/.claude/skills/pentest/core/reporting/: SKILL.md
claude-code/.claude/skills/pentest/core/vulnerability-testing/: SKILL.md
claude-code/.claude/skills/pentest/cve/: SKILL.md
claude-code/.claude/skills/pentest/cve/exploits/: log4j.md
claude-code/.claude/skills/pentest/cve/tools/: nuclei.md
claude-code/.claude/skills/pentest/internal/: SKILL.md  tunneling.md
claude-code/.claude/skills/pentest/internal/info-gathering/: SKILL.md
claude-code/.claude/skills/pentest/internal/post-exploitation/: SKILL.md
claude-code/.claude/skills/pentest/internal/privilege-escalation/: SKILL.md  SKILL.md.bak
claude-code/.claude/skills/pentest/internal/references/: domain-pentest.md  privilege-escalation.md
claude-code/.claude/skills/pentest/internal/tools/: chisel.md  file-transfer.md  frp.md  fscan.md  metasploit.md  neo-regeorg.md  proxybridge.md  reverse-shell.md  simple-proxy.md
claude-code/.claude/skills/pentest/internal/tools-upload/: SKILL.md
claude-code/.claude/skills/pentest/internal/workflow/: SKILL.md  SKILL.md.bak
claude-code/.claude/skills/pentest/note/: SKILL.md
claude-code/.claude/skills/pentest/reverse/: SKILL.md  jndi-exploit.md
claude-code/.claude/skills/pentest/terminal/: SKILL.md
claude-code/.claude/skills/pentest/vulhub/: SKILL.md  SKILL.md.bak
claude-code/.claude/skills/pentest/vulhub/categories/: big-data.md  cms.md  container-cloud.md  database.md  devops-ci.md  file-processing.md  framework.md  java-deserialization.md  middleware.md  monitoring.md  network-service.md  nodejs-app.md  other.md  php-app.md  python-app.md  web-server.md
claude-code/.claude/skills/pentest/vulnerability-wiki/: SKILL.md  start_service.sh  test_simple.py  test_web_search.py  vuln_wiki_web.py
claude-code/.claude/skills/pentest/web/: SKILL.md  fastjson.md  java-deserialization.md  shiro.md  spring-boot.md  sqlmap.md  waf-bypass.md  wsh.md  xray.md
claude-code/meta-tooling/service/: browser.py  python_executor_mcp.py  reverse_mcp.py
claude-code/meta-tooling/service/tests/: test_reverse_mcp.py  test_reverse_mcp_jndi.py
claude-code/meta-tooling/toolset/src/: __init__.py
claude-code/meta-tooling/toolset/src/core/: __init__.py  docstring.py
claude-code/meta-tooling/toolset/src/toolset/: __init__.py  terminal.py
task/: .env.example  (+9 more)
(+163 files in other folders)
